# jdedit

./: .gitignore  CMakeLists.txt  Makefile.am  Makefile.old  README.md  configure.ac  main.c
src/: append_buffer.c  append_buffer.h  editor.c  editor.h  key.h  main.c  row.c  row.h  syntax.c  syntax.h  terminal.c  terminal.h
test/: test.py  testfile
